
name:                pgdl
version:             0.5.1.3
license:             PublicDomain
license-file:        LICENSE
author:              sifmelcara
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

executable pgdl
  hs-source-dirs:      src
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base, split, process, 
                       directory, http-conduit, bytestring,
                       transformers, resourcet, tagsoup, 
                       vty, text, vty-ui,
                       text-icu, array, configurator,
                       filepath, binary
  ghc-options:         -threaded -O2
  -- hs-source-dirs:      
  default-language:    Haskell2010

