
name:                pgdl
version:             9.0
license:             PublicDomain
license-file:        LICENSE
author:              mingchuan
maintainer:          mingchuan
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
description:         
synopsis:            

source-repository head
  type:     git
  location: https://github.com/sifmelcara/pgdl

executable pgdl
  hs-source-dirs:      src
  main-is:             Pgdl.hs
  other-modules:       
  build-depends:       base == 4.*
  ghc-options:         -threaded -O2
  default-language:    Haskell2010

