
name:                pgdl
version:             9.0
license:             PublicDomain
license-file:        LICENSE
author:              mingchuan
maintainer:          mingchuan
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
description:         
synopsis:            browse directory listing webpages and download file from them.

source-repository head
  type:     git
  location: https://github.com/sifmelcara/pgdl

executable pgdl
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       
  build-depends:       base == 4.*,
                       tagsoup,
                       directory-listing-webpage-parser,
                       brick, vty, data-default,
                       vector,
                       text, bytestring,
                       unix,
                       conduit, conduit-extra,
                       http-conduit, resourcet,
                       configurator >= 0.3,
                       directory >= 1.2.3.0,
                       Cabal,
                       filepath,
                       transformers,
                       process,
                       filepath,
                       time,
                       binary

  ghc-options:         -threaded
  default-language:    Haskell2010

